--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,12 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+p {
+    margin: 0;
+    margin-bottom: 5px;
+}
+
+h1 {
+    margin: 0;
+}
